# zephyr

tests/net/lib/lwm2m/lwm2m_message_handling/: CMakeLists.txt  prj.conf  testcase.yaml
tests/net/lib/lwm2m/lwm2m_message_handling/src/: lwm2m_message_handling.c  stubs.c  stubs.h
